<resources>
    <string name="app_name">Buck Counter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Buck Counter</string>
    <string name="nav_header_subtitle">buck.counter.care@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_export">Export Data</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_accounts">Accounts</string>
    <string name="storage_access_required">Storage access is required to export data</string>
    <string name="storage_access_denied">Storage access denied</string>
    <string name="export_success_message">Data is exported successfully</string>
    <string name="export_failure_message">Data was not exported</string>
    <string name="export_progress_message">Data is being exported</string>
    <!-- Add Account -->
    <string name="title_activity_add_account">Add Account</string>
    <string name="init_with_zero_label">Initialize with ₹0 Balance</string>
    <string name="add_account_name_hint">Enter account name</string>
    <string name="add_account_balance_hint">Enter initial account balance</string>
    <string name="add_account_name_error">Please enter a valid name for the account</string>
    <string name="add_account_balance_error">Please enter a valid starting balance</string>
    <string name="add_account_success">Account added successfully</string>
    <string name="add_account_failure">Account could not be added</string>
    <!-- Add Transaction -->
    <string name="title_activity_add_transaction">Add Transaction</string>
    <string name="transaction_type_hint">Select transaction type</string>
    <string name="transaction_type_dr">Debit (Earning)</string>
    <string name="transaction_type_cr">Credit (Spending)</string>
    <string name="transaction_type_contra">Contra (Dual)</string>
    <string name="add_transaction_particulars_hint">Enter transaction particulars</string>
    <string name="add_transaction_amount_hint">Enter transaction amount</string>
    <string name="select_debit_account_hint">Debit Account</string>
    <string name="select_credit_account_hint">Credit Account</string>
    <string name="select_debit_account_error">Please select a debit account</string>
    <string name="select_credit_account_error">Please select a credit account</string>
    <string name="select_contra_account_error">Credit and Debit accounts cannot be the same</string>
    <string name="add_transaction_particulars_error">Please enter a valid transaction particulars</string>
    <string name="add_transaction_amount_error">Please enter a valid transaction amount</string>
    <string name="add_transaction_success">Transaction added successfully</string>
    <string name="add_transaction_failure">Transaction could not be added</string>
    <!-- Edit Transaction -->
    <string name="edit_transaction_amount">Edit Amount</string>
    <string name="edit_transaction_particulars">Edit Particulars</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_confirm">Are you sure you want to delete this transaction?</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirm">Are you sure you want to delete this account?\n&#9888; This will also delete all transactions associated with this account</string>
    <string name="no_transactions_found">No Transactions Found!</string>
    <string name="no_accounts_found">No Accounts Found!</string>
    <string name="add_transaction_date_hint">Enter transaction date</string>
    <string name="edit_account_credit_limit">Edit Credit Limit</string>
    <string name="edit_account_name">Edit Name</string>
    <string name="title_activity_export_xls">Export To Excel</string>
    <!-- Export Strings -->
    <string name="export_directory_name">BuckCounter</string>
    <string name="export_file_name">Accounts_%s.xls</string>
    <string name="export_sheet_name">Transactions</string>
    <string name="export_sheet_header_debit">Debit</string>
    <string name="export_sheet_header_credit">Credit</string>
    <string name="export_sheet_header_total">Total</string>
    <string name="export_sheet_header_date">Date</string>
    <string name="export_sheet_header_particulars">Particulars</string>
    <string name="export_sheet_header_balance">Balance</string>
    <string name="export_sheet_credit_limit">Credit Limit</string>
    <string name="export_sheet_remaining_credit_limit">Remaining Credit Limit</string>
    <string name="is_credit_card_label">Is credit card?</string>
    <string name="add_credit_limit_hint">Enter credit limit</string>
    <string name="add_credit_limit_error">Please enter a valid credit limit</string>
    <string name="credit_limit_label">Credit Limit</string>
    <string name="remaining_credit_limit_label">Remaining Credit Limit</string>
    <string name="initial_transaction_particulars">initial balance</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="no_sign_in"><u>Or continue without signing in</u></string>
    <string name="sign_out_button_label">Sign out</string>
    <array name="particulars_array">
        <item>initial balance</item>
        <item>atm withdrawal</item>
        <item>food delivery</item>
        <item>food</item>
        <item>breakfast</item>
        <item>lunch</item>
        <item>dinner</item>
        <item>credit card bill</item>
        <item>credit card payment</item>
        <item>online wallet money load</item>
        <item>online order</item>
        <item>cashback</item>
        <item>groceries</item>
        <item>internet connection</item>
        <item>mobile recharge</item>
        <item>interest</item>
        <item>mutual funds</item>
        <item>investments</item>
        <item>stocks</item>
        <item>loan repayment</item>
        <item>emi</item>
        <item>loan emi</item>
        <item>fuel</item>
        <item>movies</item>
        <item>restaurant</item>
        <item>travel</item>
        <item>hotel</item>
        <item>vacation</item>
    </array>
    <!-- Shortcuts -->
    <string name="shortcut_label_view_accounts">View Accounts</string>
    <string name="shortcut_label_view_transactions">View Transactions</string>
    <string name="shortcut_label_add_account">Add Account</string>
    <string name="shortcut_label_add_transaction">Add Transaction</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="overview">overview</string>
    <string name="overview1">Total Account Balance\n%s</string>
    <string name="overview2">Total Credit Limit\n%s\n\nRemaining Credit Limit\n%s</string>
    <string name="archive_account">Archive Account</string>
    <string name="label_show_archived_accounts">Archived Accounts</string>
    <string name="title_activity_archived_accounts">Archived Accounts</string>
    <string name="unarchive_account">Unarchive Account</string>
    <string name="balance">Balance</string>
    <string name="total_balance">Total Balance</string>
</resources>
