<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/account_bank"
            android:title="@string/title_activity_accounts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/database"
            android:title="@string/title_activity_transactions" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/database_export"
            android:title="@string/menu_export" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
