<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddTransaction"
    tools:showIn="@layout/activity_add_transaction">
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/add_transaction_type"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/colorAccent"
            android:text="@string/transaction_type_hint"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/transaction_type_credit"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_cr"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:theme="@style/Theme.MaterialComponents.Light"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/transaction_type_debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_dr"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:theme="@style/Theme.MaterialComponents.Light"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/transaction_type_contra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_type_contra"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:theme="@style/Theme.MaterialComponents.Light"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_credit_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <AutoCompleteTextView
            android:id="@+id/select_credit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_credit_account_hint"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_debit_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/select_debit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_debit_account_hint"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_transaction_date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_transaction_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_transaction_date_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_transaction_particulars_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/add_transaction_particulars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_transaction_particulars_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_transaction_amount_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_transaction_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/add_transaction_amount_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>