<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddAccount"
    tools:showIn="@layout/activity_add_account">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_account_name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_account_name_hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/init_with_zero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/init_with_zero_label"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_account_balance_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_account_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/add_account_balance_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/is_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/is_credit_card_label"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_credit_limit_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_credit_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal|numberSigned"
            android:hint="@string/add_credit_limit_hint"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>